<resources>
    <string name="app_name">Halodoc</string>
    <string name="image">image</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="daftar">Daftar</string>
    <string name="belum_memiliki_akun">Belum memiliki akun?</string>
    <string name="login">Login</string>
    <string name="silahkan_login">Silahkan Login</string>
    <string name="silahkan_mendaftar">Silahkan Mendaftar</string>
    <string name="sudah_memiliki_akun">Sudah memiliki akun?</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="buat_janji">Buat Janji</string>
    <string name="konsultasi">Konsultasi</string>
    <string name="beranda">Beranda</string>
    <string name="transaksi">Transaksi</string>
    <string name="profil">Profil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button" />
    <string name="pilih_spesialis">Pilih Spesialis</string>
    <string name="pilih_layanan">Pilih Layanan</string>
    <string name="progress">Dalam Proses</string>
    <string name="done">Selesai</string>

    <string-array name="specialist">
        <item>Covid-19 Test</item>
        <item>Vaksinasi Covid-19</item>
        <item>Kandungan dan Kebidanan (Obgyn)</item>
        <item>Poliklinik Bedah</item>
        <item>Poliklinik Penyakit Dalam</item>
        <item>Poliklinik Jantung dan Pembuluh Darah</item>
        <item>Poliklinik Anak</item>
        <item>Perawatan Gigi</item>
        <item>Poliklinik Gigi Spesialis</item>
        <item>Perawatan Kecantikan</item>
        <item>Poliklinik Mata</item>
        <item>Medical Check Up</item>
        <item>Poliklinik Telinga Hidung Tenggorokan</item>
        <item>Poliklinik Umum</item>
        <item>Poliklinik Radiologi</item>
        <item>Laboratorium</item>
        <item>Poliklinik Andrologi</item>
        <item>Poliklinik Kedokteran Jiwa atau Psikiatri</item>
        <item>Poliklinik Kedokteran Fisik dan Rehabilitasi</item>
        <item>Pemeriksaan Diagnostik</item>
        <item>Perawatan</item>
        <item>Vaksinasi</item>
        <item>Poliklinik Anestesiologi dan Terapi Intensif</item>
        <item>Poliklinik Pulmonologi dan Kedokteran Respirasi (Paru)</item>
        <item>Poliklinik Kedokteran Olahraga</item>
        <item>Poliklinik Patologi</item>
        <item>Poliklinik Akupunktur</item>
        <item>Poliklinik Patologi Anatomi</item>
        <item>Poliklinik Kedokteran Forensik</item>
    </string-array>

    <string-array name="jenis">
        <item>Makanan</item>
        <item>Minuman</item>
        <item>Obat-obatan</item>
        <item>Alat-alat</item>
    </string-array>

    <string-array name="payment">
        <item>Transfer Bank</item>
        <item>OVO</item>
        <item>DANA</item>
        <item>GO-PAY</item>
        <item>LINK-AJA</item>

    </string-array>

</resources>